<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_createalarm_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".createalarm.CreateAlarmFragment">

    <TextView
        android:id="@+id/update_scheduleAlarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/recurring_alarm_text"
        android:textAlignment="center" />

    <TimePicker
        android:id="@+id/update_timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:timePickerMode="spinner" />

    <EditText
        android:id="@+id/update_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/alarm_title_text" />


    <LinearLayout
        android:id="@+id/update_recurring_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <CheckBox
            android:id="@+id/update_checkMon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mon_text"
            android:textSize="@dimen/md_value" />

        <CheckBox
            android:id="@+id/update_checkTue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tue_text"
            android:textSize="@dimen/md_value" />

        <CheckBox
            android:id="@+id/update_checkWed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wed_text"
            android:textSize="@dimen/md_value" />

        <CheckBox
            android:id="@+id/update_checkThu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thu_text"
            android:textSize="@dimen/md_value" />

        <CheckBox
            android:id="@+id/update_checkFri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fri_text"
            android:textSize="@dimen/md_value" />

        <CheckBox
            android:id="@+id/update_checkSat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sat_text"
            android:textSize="@dimen/md_value" />

        <CheckBox
            android:id="@+id/update_checkSun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sun_text"
            android:textSize="@dimen/md_value" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/update_Checkrecurring"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recurring_alarm_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/update_edit_AlarmButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="@dimen/md_value"
            android:text="@string/edit_btn" />

        <Button
            android:id="@+id/update_delete_AlarmButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="@dimen/md_value"
            android:text="@string/delete_btn" />
    </LinearLayout>


</LinearLayout>
